<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="open_settings"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_settings"
        android:shortcutShortLabel="@string/shortcut_settings_short"
        android:shortcutLongLabel="@string/shortcut_settings_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.typlx.keyboard"
            android:targetClass="com.typlx.keyboard.SettingsActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="word_list"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_wordlist"
        android:shortcutShortLabel="@string/shortcut_wordlist_short"
        android:shortcutLongLabel="@string/shortcut_wordlist_long">
        <intent
            android:action="com.typlx.keyboard.ACTION_WORD_LIST"
            android:targetPackage="com.typlx.keyboard"
            android:targetClass="com.typlx.keyboard.SettingsActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="text_shortcuts"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_textshortcuts"
        android:shortcutShortLabel="@string/shortcut_textshortcuts_short"
        android:shortcutLongLabel="@string/shortcut_textshortcuts_long">
        <intent
            android:action="com.typlx.keyboard.ACTION_TEXT_SHORTCUTS"
            android:targetPackage="com.typlx.keyboard"
            android:targetClass="com.typlx.keyboard.SettingsActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>
